# Reveal-IG

./: LICENSE  README.md  compare_images.py  pyproject.toml
examples/: synthetic_demo.py  tabular_demo.py
revealig/: __init__.py
revealig/compare/: captum_baselines.py
revealig/core/: integrator.py  kl.py  path.py
revealig/image/: attribution.py  stopping.py  viz.py
revealig/tabular/: __init__.py  integrator.py  pool.py
